--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <script src="script.js"></script>
     <p class="designer">
-       : : : By Anoop2005 : : :
+       Anoop2005
     </p>
   </body>
 </html>
